--- a/PhoneContacts/Base.lproj/Main.storyboard
+++ b/PhoneContacts/Base.lproj/Main.storyboard
@@ -255,23 +255,44 @@
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zf4-i8-dlK" userLabel="Left View">
                                                         <rect key="frame" x="0.0" y="0.0" width="127.5" height="100"/>
                                                     </view>
-                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="M0r-gu-yJC" userLabel="Profile Picture">
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HHp-Xl-rPg">
                                                         <rect key="frame" x="127.5" y="0.0" width="100" height="100"/>
-                                                        <color key="backgroundColor" red="1" green="0.42038915640000002" blue="0.51019766280000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <subviews>
+                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="M0r-gu-yJC" userLabel="Profile Picture">
+                                                                <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                                                <color key="backgroundColor" red="1" green="0.42038915640000002" blue="0.51019766280000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="height" constant="100" id="c0L-Li-bAx"/>
+                                                                    <constraint firstAttribute="width" constant="100" id="mhX-KY-csd"/>
+                                                                </constraints>
+                                                            </imageView>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZFV-Da-F6L" userLabel="Initials Label">
+                                                                <rect key="frame" x="19.5" y="35" width="61" height="30"/>
+                                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                        </subviews>
                                                         <constraints>
-                                                            <constraint firstAttribute="height" constant="100" id="c0L-Li-bAx"/>
-                                                            <constraint firstAttribute="width" constant="100" id="mhX-KY-csd"/>
+                                                            <constraint firstItem="M0r-gu-yJC" firstAttribute="height" secondItem="HHp-Xl-rPg" secondAttribute="height" id="1Ik-l4-U8U"/>
+                                                            <constraint firstItem="ZFV-Da-F6L" firstAttribute="centerX" secondItem="M0r-gu-yJC" secondAttribute="centerX" id="5cN-wW-Fgb"/>
+                                                            <constraint firstItem="M0r-gu-yJC" firstAttribute="top" secondItem="HHp-Xl-rPg" secondAttribute="top" id="GG3-5B-SOk"/>
+                                                            <constraint firstItem="ZFV-Da-F6L" firstAttribute="centerY" secondItem="M0r-gu-yJC" secondAttribute="centerY" id="cMm-si-0n8"/>
+                                                            <constraint firstItem="M0r-gu-yJC" firstAttribute="width" secondItem="HHp-Xl-rPg" secondAttribute="width" id="mXa-HK-Dg5"/>
+                                                            <constraint firstItem="M0r-gu-yJC" firstAttribute="leading" secondItem="HHp-Xl-rPg" secondAttribute="leading" id="qzv-vK-Lcg"/>
+                                                            <constraint firstItem="ZFV-Da-F6L" firstAttribute="width" secondItem="M0r-gu-yJC" secondAttribute="width" multiplier="0.61" id="rSu-DI-Q65"/>
                                                         </constraints>
-                                                    </imageView>
+                                                    </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aCd-JH-OB8" userLabel="Right View">
                                                         <rect key="frame" x="227.5" y="0.0" width="127.5" height="100"/>
                                                     </view>
                                                 </subviews>
                                                 <constraints>
                                                     <constraint firstItem="aCd-JH-OB8" firstAttribute="width" secondItem="zf4-i8-dlK" secondAttribute="width" id="gJb-2N-4jI"/>
+                                                    <constraint firstItem="HHp-Xl-rPg" firstAttribute="top" secondItem="zf4-i8-dlK" secondAttribute="top" id="sg7-zz-3YY"/>
                                                 </constraints>
                                             </stackView>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xas-ve-0de">
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xas-ve-0de" userLabel="Margin View">
                                                 <rect key="frame" x="0.0" y="100" width="355" height="20"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="20" id="xno-SV-SJh"/>
@@ -285,7 +306,7 @@
                                             </label>
                                         </subviews>
                                     </stackView>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9Ng-kG-ag0">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9Ng-kG-ag0" userLabel="Margin View">
                                         <rect key="frame" x="0.0" y="150" width="355" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="T18-zt-ziI"/>
@@ -381,6 +402,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="initialsLabel" destination="ZFV-Da-F6L" id="maJ-4A-7Wq"/>
                         <outlet property="nameLabel" destination="bcn-MZ-gZq" id="Mu9-5W-Xgt"/>
                         <outlet property="phoneLabel" destination="hax-8u-Tq9" id="gbx-LG-rlm"/>
                         <outlet property="profilePicture" destination="M0r-gu-yJC" id="wyn-SL-sJ0"/>
