--- a/PhoneContacts/Base.lproj/Main.storyboard
+++ b/PhoneContacts/Base.lproj/Main.storyboard
@@ -244,7 +244,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="dSq-Hd-Ufd" userLabel="Content Stack">
-                                <rect key="frame" x="10" y="20" width="355" height="647"/>
+                                <rect key="frame" x="10" y="20" width="355" height="637"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="xbS-UG-GaS" userLabel="Header Stack">
                                         <rect key="frame" x="0.0" y="0.0" width="355" height="150"/>
@@ -267,7 +267,7 @@
                                                                 </constraints>
                                                             </imageView>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZFV-Da-F6L" userLabel="Initials Label">
-                                                                <rect key="frame" x="19.5" y="35" width="61" height="30"/>
+                                                                <rect key="frame" x="0.0" y="35" width="100" height="30"/>
                                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
                                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 <nil key="highlightedColor"/>
@@ -280,7 +280,7 @@
                                                             <constraint firstItem="ZFV-Da-F6L" firstAttribute="centerY" secondItem="M0r-gu-yJC" secondAttribute="centerY" id="cMm-si-0n8"/>
                                                             <constraint firstItem="M0r-gu-yJC" firstAttribute="width" secondItem="HHp-Xl-rPg" secondAttribute="width" id="mXa-HK-Dg5"/>
                                                             <constraint firstItem="M0r-gu-yJC" firstAttribute="leading" secondItem="HHp-Xl-rPg" secondAttribute="leading" id="qzv-vK-Lcg"/>
-                                                            <constraint firstItem="ZFV-Da-F6L" firstAttribute="width" secondItem="M0r-gu-yJC" secondAttribute="width" multiplier="0.61" id="rSu-DI-Q65"/>
+                                                            <constraint firstItem="ZFV-Da-F6L" firstAttribute="width" secondItem="M0r-gu-yJC" secondAttribute="width" id="rSu-DI-Q65"/>
                                                         </constraints>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aCd-JH-OB8" userLabel="Right View">
@@ -313,10 +313,10 @@
                                         </constraints>
                                     </view>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Zsg-2K-flu" userLabel="Buttons Stack">
-                                        <rect key="frame" x="0.0" y="180" width="355" height="88"/>
+                                        <rect key="frame" x="0.0" y="180" width="355" height="50"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mQ2-55-8Me" userLabel="Message Button">
-                                                <rect key="frame" x="0.0" y="0.0" width="83" height="88"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="83" height="50"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                 <buttonConfiguration key="configuration" style="plain" imagePlacement="top" title="message">
                                                     <imageReference key="image" image="message.fill" catalog="system" symbolScale="default"/>
@@ -330,7 +330,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hkU-lh-twG" userLabel="Mobile Button">
-                                                <rect key="frame" x="91" y="0.0" width="82.5" height="88"/>
+                                                <rect key="frame" x="91" y="0.0" width="82.5" height="50"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" imagePlacement="top" title="mobile">
                                                     <imageReference key="image" image="phone.fill" catalog="system" symbolScale="default"/>
@@ -344,7 +344,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GoA-Lf-WX9" userLabel="Video Button">
-                                                <rect key="frame" x="181.5" y="0.0" width="83" height="88"/>
+                                                <rect key="frame" x="181.5" y="0.0" width="83" height="50"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" imagePlacement="top" title="video">
                                                     <imageReference key="image" image="video.fill" catalog="system" symbolScale="default"/>
@@ -358,7 +358,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qg4-xz-wXU" userLabel="Mail Button">
-                                                <rect key="frame" x="272.5" y="0.0" width="82.5" height="88"/>
+                                                <rect key="frame" x="272.5" y="0.0" width="82.5" height="50"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                 <buttonConfiguration key="configuration" style="plain" imagePlacement="top" title="mail">
                                                     <imageReference key="image" image="envelope.fill" catalog="system" symbolScale="default"/>
@@ -375,50 +375,57 @@
                                         </subviews>
                                     </stackView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="edI-Gn-qOX" userLabel="Margin View">
-                                        <rect key="frame" x="0.0" y="268" width="355" height="20"/>
+                                        <rect key="frame" x="0.0" y="230" width="355" height="20"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="20" id="0ch-KC-2mP"/>
                                         </constraints>
                                     </view>
                                     <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YW3-7W-1Uc" userLabel="Phone Number Stack">
-                                        <rect key="frame" x="0.0" y="288" width="355" height="88"/>
+                                        <rect key="frame" x="0.0" y="250" width="355" height="50"/>
                                         <subviews>
-                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="h1C-TC-Lfx">
-                                                <rect key="frame" x="0.0" y="0.0" width="41.5" height="88"/>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sGn-Kd-jRV" userLabel="Margin View">
+                                                <rect key="frame" x="0.0" y="0.0" width="15" height="50"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="15" id="ChP-cu-Og1"/>
+                                                </constraints>
+                                            </view>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="h1C-TC-Lfx">
+                                                <rect key="frame" x="15" y="0.0" width="41.5" height="50"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8mu-Uy-sra">
-                                                        <rect key="frame" x="0.0" y="0.0" width="41.5" height="24"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phone" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8mu-Uy-sra">
+                                                        <rect key="frame" x="0.0" y="0.0" width="41.5" height="20.5"/>
                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9zC-eZ-vD1">
-                                                        <rect key="frame" x="0.0" y="24" width="41.5" height="64"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9zC-eZ-vD1">
+                                                        <rect key="frame" x="0.0" y="20.5" width="41.5" height="29.5"/>
                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
-                                                        <nil key="highlightedColor"/>
+                                                        <color key="highlightedColor" systemColor="systemRedColor"/>
                                                     </label>
                                                 </subviews>
                                             </stackView>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lGl-3N-JBF" userLabel="Right View">
-                                                <rect key="frame" x="41.5" y="0.0" width="313.5" height="88"/>
+                                                <rect key="frame" x="56.5" y="0.0" width="298.5" height="50"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                             </view>
                                         </subviews>
                                     </stackView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QYa-aH-eQX" userLabel="Margin View">
-                                        <rect key="frame" x="0.0" y="376" width="355" height="20"/>
+                                        <rect key="frame" x="0.0" y="300" width="355" height="20"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="20" id="GIx-j2-w0J"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wnN-5j-4Sz" userLabel="Lower View">
-                                        <rect key="frame" x="0.0" y="396" width="355" height="216"/>
+                                        <rect key="frame" x="0.0" y="320" width="355" height="275.5"/>
                                     </view>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3ZZ-qc-neY" userLabel="Delete">
-                                        <rect key="frame" x="0.0" y="612" width="355" height="35"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3ZZ-qc-neY" userLabel="Delete">
+                                        <rect key="frame" x="0.0" y="595.5" width="355" height="41.5"/>
                                         <buttonConfiguration key="configuration" style="filled" title="Delejte">
                                             <backgroundConfiguration key="background">
                                                 <color key="backgroundColor" systemColor="systemRedColor"/>
@@ -439,7 +446,7 @@
                         <viewLayoutGuide key="safeArea" id="qik-2U-iqU"/>
                         <color key="backgroundColor" white="1" alpha="0.84858754139072845" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="qik-2U-iqU" firstAttribute="bottom" secondItem="dSq-Hd-Ufd" secondAttribute="bottom" id="1zN-08-x5x"/>
+                            <constraint firstItem="qik-2U-iqU" firstAttribute="bottom" secondItem="dSq-Hd-Ufd" secondAttribute="bottom" constant="10" id="1zN-08-x5x"/>
                             <constraint firstItem="dSq-Hd-Ufd" firstAttribute="top" secondItem="qik-2U-iqU" secondAttribute="top" id="Ll1-Fu-xbf"/>
                             <constraint firstItem="qik-2U-iqU" firstAttribute="trailing" secondItem="dSq-Hd-Ufd" secondAttribute="trailing" constant="10" id="ZAU-in-TQW"/>
                             <constraint firstItem="dSq-Hd-Ufd" firstAttribute="leading" secondItem="qik-2U-iqU" secondAttribute="leading" constant="10" id="qHj-DJ-6J0"/>
